--- a/redo-todo/package.json
+++ b/redo-todo/package.json
@@ -18,8 +18,8 @@
     "graphql": "^14.5.8",
     "graphql-relay": "^0.6.0",
     "prop-types": "^15.7.2",
-    "react": "16.11.x",
-    "react-dom": "16.11.x",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-relay": "^7.0.0",
     "todomvc-app-css": "^2.2.0",
     "todomvc-common": "^1.0.3",
